<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_docs"
            android:checked="false"
            android:icon="@drawable/ic_person_black_18dp"
            android:title="@string/my_docs" />

        <item
            android:id="@+id/dialogs_docs"
            android:checked="false"
            android:icon="@drawable/ic_forum_black_18dp"
            android:title="@string/dialogs_docs" />

        <item
            android:id="@+id/group_docs"
            android:checked="false"
            android:icon="@drawable/ic_group_black_18dp"
            android:title="@string/group_docs" />

        <item
            android:id="@+id/global_docs"
            android:checked="false"
            android:icon="@drawable/ic_public_black_18dp"
            android:title="@string/global_docs" />
    </group>
</menu>