<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/popup_padding">

    <TextView
        android:id="@+id/rename_text"
        style="@style/CaptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/doc_list_item_margin"
        android:text="@string/rename_document"
        android:labelFor="@+id/new_caption"
        app:layout_gravity="center_vertical" />

    <EditText
        android:id="@+id/new_caption"
        style="@style/SmallText"
        android:inputType="textAutoComplete|textAutoCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rename_text"
        android:layout_margin="@dimen/doc_list_item_margin" />

    <TextView
        android:id="@+id/rename_cancel"
        style="@style/SmallPrimaryText"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/new_caption"
        android:gravity="center"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/rename_ok"
        style="@style/SmallPrimaryText"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/new_caption"
        android:layout_toStartOf="@id/rename_cancel"
        android:gravity="center"
        android:text="@string/ok" />
</RelativeLayout>