<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:id="@+id/outside_touchable"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:padding="10dp"--><!--android:background="@color/vk_grey_color">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outside_touchable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/vk_grey_color"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/drive_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/white_circle"
            android:contentDescription="@string/drive_icon"
            android:src="@drawable/google_drive_icon" />

        <TextView
            style="@style/SmallBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drive_label" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/device_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/blue_circle"
            android:contentDescription="@string/drive_icon"
            android:src="@drawable/ic_folder_white_24dp" />

        <TextView
            style="@style/SmallBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/files" />
    </LinearLayout>

</LinearLayout><!--</FrameLayout>-->