<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="@dimen/doc_list_item_padding"
    android:paddingTop="@dimen/doc_list_item_padding"
    android:paddingBottom="@dimen/doc_list_item_padding"
    app:columnCount="4"
    app:rowCount="3"
    android:id="@+id/list_item_grid">

    <ImageView
        android:contentDescription="@string/doc_icon"
        android:id="@+id/list_item_preview"
        android:layout_width="0dp"
        android:adjustViewBounds="true"
        android:maxHeight="@dimen/preview_size"
        android:maxWidth="@dimen/preview_size"
        android:layout_margin="@dimen/doc_list_item_margin"
        android:src="@drawable/ic_image_black_24dp"
        app:layout_columnWeight="1"
        app:layout_rowSpan="2"
        app:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/list_item_title"
        android:layout_width="0dp"
        android:layout_margin="@dimen/doc_list_item_margin"
        style="@style/CaptionText"
        app:layout_columnSpan="2"
        app:layout_columnWeight="8"
        app:layout_gravity="center_vertical"/>

    <ImageView
        android:contentDescription="@string/doc_menu"
        android:id="@+id/menu_overflow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="0dp"
        android:scaleType="center"
        app:layout_rowSpan="2"
        app:layout_columnWeight="1"
        android:src="@drawable/ic_action_navigation_more_vert" />

    <TextView
        android:id="@+id/list_item_date"
        android:layout_width="0dp"
        android:layout_margin="@dimen/doc_list_item_margin"
        style="@style/SmallText"
        app:layout_columnWeight="4" />

    <TextView
        android:id="@+id/list_item_size"
        android:layout_width="0dp"
        android:layout_margin="@dimen/doc_list_item_margin"
        style="@style/SmallText"
        android:gravity="end"
        app:layout_columnWeight="4" />

    <!-- Возможно, стоит вынести ProgressBar из GridLayout или объединить чем-то  progress и cancel,
    иначе во время загрузки иконка меню съезжает-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_columnSpan="4"
        android:orientation="horizontal">
        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/doc_list_item_margin"
            android:layout_marginBottom="@dimen/doc_list_item_margin"
            android:layout_marginStart="@dimen/doc_list_item_margin"
            android:layout_marginEnd="@dimen/doc_list_item_padding"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"/>

        <TextView
            android:id="@+id/cancel_loading"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/doc_list_item_margin"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/cancel"
            android:visibility="gone"
            android:gravity="center"
            style="@style/SmallText"/>
    </LinearLayout>


</android.support.v7.widget.GridLayout>